crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__multiple-starred-expressions_F622.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F622 Two starred expressions in assignment
 --> F622.py:1:1
  |
1 | *a, *b, c = (1, 2, 3)
  | ^^^^^^^^^
2 | *a, b, c = (1, 2, 3)
3 | a, b, *c = (1, 2, 3)
  |
