crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__nested_relative_typing_module.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `foo`
  --> baz.py:26:17
   |
25 |     # F821
26 |     x: Literal["foo"]
   |                 ^^^

F821 Undefined name `foo`
  --> baz.py:33:17
   |
32 |     # F821
33 |     x: Literal["foo"]
   |                 ^^^
