crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__percent-format-expected-sequence_F50x.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F503 `%`-format string expected sequence but got mapping
  --> F50x.py:10:1
   |
 8 | '%(bar)s' % {'bar': 1, 'baz': 2}  # F504
 9 | '%(bar)s' % (1, 2, 3)  # F502
10 | '%s %s' % {'k': 'v'}  # F503
   | ^^^^^^^^^^^^^^^^^^^^
11 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
   |
