crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__percent-format-extra-named-arguments_F504.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F504 [*] `%`-format string has unused named argument(s): b
 --> F504.py:3:1
  |
1 | # nuff has no way of knowing if the following are F505s
2 | a = "wrong"
3 | "%(a)s %(c)s" % {a: "?", "b": "!"}  # F504 ("b" not used)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | hidden = {"a": "!"}
  |
help: Remove extra named arguments: b
  |
2 | a = "wrong"
  - "%(a)s %(c)s" % {a: "?", "b": "!"}  # F504 ("b" not used)
3 + "%(a)s %(c)s" % {a: "?", }  # F504 ("b" not used)
4 |
  |

F504 [*] `%`-format string has unused named argument(s): b
 --> F504.py:8:1
  |
6 | "%(a)s %(c)s" % {"x": 1, **hidden}  # Ok (cannot see through splat)
7 |
8 | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
  |
help: Remove extra named arguments: b
  |
7 |
  - "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
8 + "%(a)s" % {"a": 1, }  # F504 ("b" not used)
9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
  |

F504 [*] `%`-format string has unused named argument(s): b
  --> F504.py:9:1
   |
 8 | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
 9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |
11 | '' % {'a''b' : ''}  # F504 ("ab" not used)
   |
help: Remove extra named arguments: b
   |
8  | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
   - "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
9  + "%(a)s" % {'a': 1, }  # F504 ("b" not used)
10 |
   |

F504 [*] `%`-format string has unused named argument(s): ab
  --> F504.py:11:1
   |
 9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
10 |
11 | '' % {'a''b' : ''}  # F504 ("ab" not used)
   | ^^^^^^^^^^^^^^^^^^
12 |
13 | # Upstream regression case
   |
help: Remove extra named arguments: ab
   |
10 |
   - '' % {'a''b' : ''}  # F504 ("ab" not used)
11 + '' % {}  # F504 ("ab" not used)
12 |
   |

F504 [*] `%`-format string has unused named argument(s): test1, test2
  --> F504.py:14:1
   |
13 |   # Upstream regression case
14 | / "" % {
15 | |   'test1': '',
16 | |   'test2': '',
17 | | }
   | |_^
18 |
19 |   # Upstream regression case
   |
help: Remove extra named arguments: test1, test2
   |
14 | "" % {
   -   'test1': '',
   -   'test2': '',
15 +   
16 | }
   |

F504 [*] `%`-format string has unused named argument(s): greeting
  --> F504.py:20:1
   |
19 | # Upstream regression case
20 | "Hello, %(name)s" % {"greeting": print(1), "name": "World"}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove extra named arguments: greeting
   |
19 | # Upstream regression case
   - "Hello, %(name)s" % {"greeting": print(1), "name": "World"}
20 + "Hello, %(name)s" % {"name": "World"}
   |
note: This is an unsafe fix and may change runtime behavior
