crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__percent-format-extra-named-arguments_F50x.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F504 [*] `%`-format string has unused named argument(s): baz
  --> F50x.py:8:1
   |
 6 | '%s %s' % (1, 2, 3)  # F507
 7 | '%(bar)s' % {}  # F505
 8 | '%(bar)s' % {'bar': 1, 'baz': 2}  # F504
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 9 | '%(bar)s' % (1, 2, 3)  # F502
10 | '%s %s' % {'k': 'v'}  # F503
   |
help: Remove extra named arguments: baz
  |
7 | '%(bar)s' % {}  # F505
  - '%(bar)s' % {'bar': 1, 'baz': 2}  # F504
8 + '%(bar)s' % {'bar': 1, }  # F504
9 | '%(bar)s' % (1, 2, 3)  # F502
  |
