crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__percent-format-invalid-format_F50x.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F501 `%`-format string has invalid format string: incomplete format
 --> F50x.py:1:1
  |
1 | '%(foo)' % {'foo': 'bar'}  # F501
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
  |
